@@ -62,7 +62,12 @@ class tx_pastecode_pi2 extends tslib_pibase {
 
 		$this->template = $this->cObj->fileResource($this->conf['general.']['templateFile']);
 
-		return $this->pi_wrapInBaseClass($this->newCode());
+		// user has to be logged in to add new snippets
+		if(!$GLOBALS['TSFE']->loginUser) {
+			return $this->cObj->stdWrap($this->pi_getLL('error_login'), $this->conf['general.']['error_stdWrap.']);
+		} else {
+			return $this->pi_wrapInBaseClass($this->newCode());
+		}
 	}
 
 
